# passport_rpi

./: Cargo.toml  a.json
.cargo/: config
.github/workflows/: rust.yml
hid_scanner/: Cargo.toml
hid_scanner/src/: lib.rs
src/: api.rs  lib.rs  main.rs  rpi.rs
