[package]
name = "passport_rpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
# target = "armv7-unknown-linux-gnueabihf"

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"

[target.armv7-unknown-linux-gnueabihf.dependencies]
rppal = "0.13.1"

[dependencies]
openssl = { version = "0.10.29", features = ["vendored"] }
hid-scanner = { path = "./hid_scanner" }
hidapi-rusb = "1.3.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
rodio = "0.15.0"