[package]
name = "passport_rpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[target.armv7-unknown-linux-gnueabihf.dependencies]
rppal = "0.13.1"

[dependencies]
alsa-sys = { version = "0.3.1", features = ["use-bindgen"] }
openssl = { version = "0.10.38", features = ["vendored"] }
hid-scanner = { path = "./hid_scanner" }
hidapi-rusb = "1.3.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
rodio = "0.15.0"